--- a/jenkins/k8s/jenkins.yaml
+++ b/jenkins/k8s/jenkins.yaml
@@ -26,7 +26,8 @@ spec:
     spec:
       containers:
       - name: master
-        image: jenkins/jenkins:2.67
+        # image: jenkins/jenkins:2.67
+        image: jenkins/jenkins:2.73.2
         ports:
         - containerPort: 8080
         - containerPort: 50000
